<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#02105E"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewSetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allan_bold"
            android:text="@string/configurar"
            android:textColor="#F6F4F4"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewNewGame"
            app:layout_constraintStart_toStartOf="@+id/textViewNewGame"
            app:layout_constraintTop_toBottomOf="@+id/textViewContinue" />

        <TextView
            android:id="@+id/textViewNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/allan_bold"
            android:text="@string/novogame"
            android:textColor="#F6F4F4"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textViewContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/allan_bold"
            android:text="@string/continuar"
            android:textColor="#F6F4F4"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewNewGame"
            app:layout_constraintStart_toStartOf="@+id/textViewNewGame"
            app:layout_constraintTop_toBottomOf="@+id/textViewNewGame" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSetings"
            app:srcCompat="@drawable/semfundotetris" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="262dp"
            android:layout_height="254dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tetris2019logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
